*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Added negative boosting gain option in 'Boosting' mode.
* Assigned more correct names for sidechain types.
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.
* Small UI fixes related to output level meter.

=== 1.0.4 ===
* Fixed invalid phase compensation issue of the dry signal for 'Modern' mode.
* Added all-pass phase compensation for the dry signal for the 'Classic' mode.
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Initial release.
