@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.7 ===
+* Added 'Min' and 'Max' sidechain sources for the multiband compressor.
 * Updated build scripts and dependencies.
 
 === 1.0.6 ===
